# init-rs

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example-bin/: Cargo.toml  build.rs
example-bin/src/: main.rs
example-lib/: Cargo.toml
example-lib/src/: lib.rs
example/src/: main.rs
init/: Cargo.toml
init/src/: lib.rs
init_codegen/: Cargo.toml
init_codegen/src/: lib.rs
