[package]
name = "init"
version = "0.1.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
description = "Mark a function to run before main."
homepage = "https://github.com/mehcode/init-rs"
documentation = "https://docs.rs/init"
repository = "https://github.com/mehcode/init-rs/tree/master/init"
readme = "README.md"
keywords = ["init"]
license = "MIT/Apache-2.0"

[dependencies]
gcc = "0.3"
init_codegen = "0.1.0"
