[package]
name = "init_codegen"
version = "0.2.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
description = "Procedural macro for Init."
homepage = "https://github.com/mehcode/init-rs"
documentation = "https://docs.rs/init"
repository = "https://github.com/mehcode/init-rs/tree/master/init_codegen"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "0.3.12"
syn = { version = "0.11", features = ["full"] }
lazy_static = "0.2.2"
